Add follow function

--- a/src/Eccube/Resource/template/default/Farm/farm_profile.twig
+++ b/src/Eccube/Resource/template/default/Farm/farm_profile.twig
@@ -146,9 +146,15 @@
 
             <div id="receiver-profile" class="clearfix">
                 <div class="col-sm-12 col-xs-12">
-                    {% if is_granted("IS_AUTHENTICATED_FULLY") and app.user.id == TargetCustomer.id %}
-                    <a href="{{ url('farm_profile_edit') }}"><button class="btn btn-success float-right farmer-follow-btn">編集</button></a>
+                    {% if is_granted(constant('Eccube\\Entity\\Master\\CustomerRole::FARMER')) and app.user.id == TargetCustomer.id %}
+                        <a href="{{ url('farm_profile_edit') }}"><button class="btn btn-success float-right farmer-follow-btn">編集</button></a>
+                    {% elseif is_granted(constant('Eccube\\Entity\\Master\\CustomerRole::RECIPIENT')) %}
+                        {% if app.user.isFollow(TargetCustomer.id) %}
+                            <button class="btn btn-success float-right farmer-follow-btn">Followed</button>
+                        {% else %}
+                            <a class="btn btn-success float-right farmer-follow-btn" href="{{ url('farm_profile_follow', {id: TargetCustomer.id}) }}" {{ csrf_token_for_anchor() }} data-method="put" data-confirm="false">Follow</a>
                         {% endif %}
+                    {% endif %}
                     {% set img = app.config.front_urlpath ~ '/yasai-bus/img/camera.PNG' %}
                     {% if TargetCustomer.profile_image %}
                         {% set img = app.config.image_save_urlpath ~'/'~ TargetCustomer.profile_image %}
