--- a/src/Eccube/Resource/template/default/Receiver/receiver_home.twig
+++ b/src/Eccube/Resource/template/default/Receiver/receiver_home.twig
@@ -40,6 +40,10 @@
                 border: 1px solid #ddd !important;
                 height: 350px;
             }
+            .thumbnail .main-img {
+                width: 345px;
+                height: 200px;
+            }
         }
     </style>
 {% endblock stylesheet %}
