--- a/src/Eccube/Resource/template/default/Block/top.twig
+++ b/src/Eccube/Resource/template/default/Block/top.twig
@@ -35,7 +35,7 @@
     <div class="farmer-new-header">
         <img src="{{ app.config.front_urlpath }}/yasai-bus/img/icon/nav-menu.svg" class="hambuger-menu-reicever">
         <a href="{{ url('top') }}"><img src="{{ app.config.front_urlpath }}/yasai-bus/img/icon/logo.svg" class="logo-svg"></a>
-        <a href="#" class="float-right"><img src="{{ app.config.front_urlpath }}/yasai-bus/img/icon/nav-search.svg" class="nav-search"></a>
+        <a href="{{ url('receiver_search') }}" class="float-right"><img src="{{ app.config.front_urlpath }}/yasai-bus/img/icon/nav-search.svg" class="nav-search"></a>
         <a href="#" class="float-right"><img src="{{ app.config.front_urlpath }}/yasai-bus/img/icon/nav-cart.svg" class="nav-cart"></a>
     </div>
 
