--- a/src/Eccube/Resource/template/default/Farm/farm_profile.twig
+++ b/src/Eccube/Resource/template/default/Farm/farm_profile.twig
@@ -150,9 +150,9 @@
                         <a href="{{ url('farm_profile_edit') }}"><button class="btn btn-success float-right farmer-follow-btn">編集</button></a>
                     {% elseif is_granted(constant('Eccube\\Entity\\Master\\CustomerRole::RECIPIENT')) %}
                         {% if app.user.isFollow(TargetCustomer.id) %}
-                            <button class="btn btn-success float-right farmer-follow-btn">Followed</button>
+                            <button class="btn btn-success float-right farmer-follow-btn">フォロー中</button>
                         {% else %}
-                            <a class="btn btn-success float-right farmer-follow-btn" href="{{ url('farm_profile_follow', {id: TargetCustomer.id}) }}" {{ csrf_token_for_anchor() }} data-method="put" data-confirm="false">Follow</a>
+                            <a class="btn btn-success float-right farmer-follow-btn" href="{{ url('farm_profile_follow', {id: TargetCustomer.id}) }}" {{ csrf_token_for_anchor() }} data-method="put" data-confirm="false">フォロー</a>
                         {% endif %}
                     {% endif %}
                     {% set img = app.config.front_urlpath ~ '/yasai-bus/img/camera.PNG' %}
