Add receiver order (3/4)

--- a/html/template/default/yasai-bus/css/style.css
+++ b/html/template/default/yasai-bus/css/style.css
@@ -2549,3 +2549,9 @@ span.required {
     bottom: 5%;
     right: 5%;
 }
+
+#map {
+    width: 60% !important;
+    margin: auto;
+    height: 300px;
+}
