--- a/src/Eccube/Resource/template/default/Order/index.twig
+++ b/src/Eccube/Resource/template/default/Order/index.twig
@@ -111,7 +111,9 @@
             <p class="title20 margin-left10 margin-top15" id="order_id">{{ Order.id }}</p>
 
             {% if is_granted(constant('Eccube\\Entity\\Master\\CustomerRole::FARMER')) and app.user.id == Order.farm[0].id %}
-            <p class="float-right margin-top10 margin-right10"><a href="{{ url('contact') }}" target="_blank" class="color888 title11">商品の出荷が難しい場合</a></p>
+            <p class="float-right margin-top10 margin-right10">
+                <a href="{{ url('contact') }}" target="_blank" class="color888 title11">商品の出荷が難しい場合</a>
+            </p>
             <form method="post" action="?" name="form-prepare">
                 <input type="hidden" name="mode" value="prepare"/>
                 <input type="hidden" name="id" value="{{ Order.id }}">
